@@ -9,3 +9,5 @@ require "wit_ruby/rest/session"
 require "wit_ruby/rest/result"
 require "wit_ruby/rest/message"
 require "wit_ruby/rest/intent"
+require "wit_ruby/rest/entity"
+require "wit_ruby/rest/expression"
