@@ -1,0 +1,11 @@
+## expression.rb
+## Internal wrapper for expression hash
+
+module Wit
+  module REST
+    class Expression < Result
+
+
+    end
+  end
+end
