@@ -1,3 +1,3 @@
 module Wit
-  VERSION = "0.0.1"
+  VERSION = "0.0.2"
 end
